# vagabot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env-example  main.py  pyproject.toml  requirements.txt  script.py
tests/: conftest.py
tests/adapters/: test_posts_from_search_adapters.py
tests/repository/: test_author_repository_sqlite.py  test_post_repository_sqlite.py
tests/testdata/: post_from_search.html
vagabot/: entities.py
vagabot/adapters/: posts_from_search_adapters.py
vagabot/repository/: author_repository.py  post_repository.py  repository.py
vagabot/services/: __init__.py  browser_service.py  remote_browser_service.py
vagabot/workflows/: __init__.py  linkedin_auth.py  linkedin_comment_post.py  linkedin_get_posts.py  linkedin_workflow.py
workflows/: linkedin_auth.py  linkedin_get_posts.py  linkedin_workflow.py
